--- a/date-calculator.html
+++ b/date-calculator.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="日期计算器, 在线工具, 日期差, 日期加减" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
-    <link href="custom.css" rel="stylesheet" />
+    <link href="/custom.css" rel="stylesheet" />
   </head>
 
   <body class="flex flex-col min-h-screen bg-gray-100 font-sans">
@@ -23,7 +23,7 @@
               <!-- 多语言切换图标 -->
             </button>
             <div id="language-menu" class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg hidden">
-              <a href="../index.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">中文</a>
+              <a href="/index.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">中文</a>
               <a href="/en/index-en.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">English</a>
               <!-- 可以添加更多语言选项 -->
             </div>
@@ -43,7 +43,7 @@
       <!-- 面包屑导航 -->
       <nav class="mb-6">
         <ol class="flex items-center space-x-2 text-sm text-gray-600">
-          <li><a href="index.html" class="hover:text-blue-600">首页</a></li>
+          <li><a href="/index.html" class="hover:text-blue-600">首页</a></li>
           <li><span class="mx-2">/</span></li>
           <li class="text-gray-800">日期计算器</li>
         </ol>
@@ -175,6 +175,6 @@
       </div>
     </footer>
 
-    <script src="custom.js"></script>
+    <script src="/custom.js"></script>
   </body>
 </html>
