--- a/json-formatter.html
+++ b/json-formatter.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="JSON 格式化, 在线工具, JSON 美化, JSON 调试" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="custom.css" rel="stylesheet" />
+    <link href="/custom.css" rel="stylesheet" />
   </head>
   <body class="flex flex-col min-h-screen bg-gray-100 font-sans">
     <!-- 头部导航 -->
@@ -138,32 +138,6 @@
         <p>&copy; 2023 在线工具箱. 保留所有权利.</p>
       </div>
     </footer>
-    <script src="custom.js"></script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const copyUrlButton = document.getElementById('copy-url');
-            const currentUrlInput = document.getElementById('current-url');
-
-            copyUrlButton.addEventListener('click', function() {
-                currentUrlInput.select();
-                document.execCommand('copy');
-                alert('网址已复制到剪切板');
-            });
-
-            const languageToggle = document.getElementById('language-toggle');
-            const languageMenu = document.getElementById('language-menu');
-
-            languageToggle.addEventListener('click', function() {
-                languageMenu.classList.toggle('hidden');
-            });
-
-            document.addEventListener('click', function(event) {
-                if (!languageToggle.contains(event.target)) {
-                    languageMenu.classList.add('hidden');
-                }
-            });
-        });
-    </script>
+    <script src="/custom.js"></script>
   </body>
 </html>
