--- a/timestamp.html
+++ b/timestamp.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="时间戳转换, 在线工具, 日期转换, 时间转换" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
-    <link href="custom.css" rel="stylesheet" />
+    <link href="/custom.css" rel="stylesheet" />
   </head>
 
   <body class="flex flex-col min-h-screen bg-gray-100 font-sans">
@@ -163,6 +163,6 @@
         <p>&copy; 2023 在线工具箱. 保留所有权利.</p>
       </div>
     </footer>
-    <script src="custom.js"></script>
+    <script src="/custom.js"></script>
   </body>
 </html>
