--- a/video-to-gif.html
+++ b/video-to-gif.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="在线视频转GIF, 视频转GIF, GIF转换, 在线工具" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
-    <link href="custom.css" rel="stylesheet" />
+    <link href="/custom.css" rel="stylesheet" />
   </head>
 
   <body class="flex flex-col min-h-screen bg-gray-100 font-sans">
@@ -43,7 +43,7 @@
       <!-- 面包屑导航 -->
       <nav class="mb-6">
         <ol class="flex items-center space-x-2 text-sm text-gray-600">
-          <li><a href="index.html" class="hover:text-blue-600">首页</a></li>
+          <li><a href="/index.html" class="hover:text-blue-600">首页</a></li>
           <li><span class="mx-2">/</span></li>
           <li class="text-gray-800">在线视频转GIF</li>
         </ol>
@@ -183,6 +183,6 @@
       </div>
     </footer>
 
-    <script src="custom.js"></script>
+    <script src="/custom.js"></script>
   </body>
 </html>
