fix gitpage path error

--- a/date-calculator.html
+++ b/date-calculator.html
@@ -23,8 +23,8 @@
               <!-- 多语言切换图标 -->
             </button>
             <div id="language-menu" class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg hidden">
-              <a href="/index.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">中文</a>
-              <a href="/en/index-en.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">English</a>
+              <a href="./index.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">中文</a>
+              <a href="./en/index-en.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">English</a>
               <!-- 可以添加更多语言选项 -->
             </div>
           </div>
@@ -175,6 +175,6 @@
       </div>
     </footer>
 
-    <script src="/custom.js"></script>
+    <script src="./custom.js"></script>
   </body>
 </html>
