--- a/timestamp.html
+++ b/timestamp.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="时间戳转换, 在线工具, 日期转换, 时间转换" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
-    <link href="/custom.css" rel="stylesheet" />
+    <link href="./custom.css" rel="stylesheet" />
   </head>
 
   <body class="flex flex-col min-h-screen bg-gray-100 font-sans">
@@ -23,8 +23,8 @@
               <!-- 多语言切换图标 -->
             </button>
             <div id="language-menu" class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg hidden">
-              <a href="/index.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">中文</a>
-              <a href="/en/index-en.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">English</a>
+              <a href="./index.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">中文</a>
+              <a href="./en/index-en.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">English</a>
               <!-- 可以添加更多语言选项 -->
             </div>
           </div>
@@ -163,6 +163,6 @@
         <p>&copy; 2023 在线工具箱. 保留所有权利.</p>
       </div>
     </footer>
-    <script src="/custom.js"></script>
+    <script src="./custom.js"></script>
   </body>
 </html>
