fix gitpage path

--- a/date-calculator.html
+++ b/date-calculator.html
@@ -43,7 +43,7 @@
       <!-- 面包屑导航 -->
       <nav class="mb-6">
         <ol class="flex items-center space-x-2 text-sm text-gray-600">
-          <li><a href="/index.html" class="hover:text-blue-600">首页</a></li>
+          <li><a href="./index.html" class="hover:text-blue-600">首页</a></li>
           <li><span class="mx-2">/</span></li>
           <li class="text-gray-800">日期计算器</li>
         </ol>
@@ -120,28 +120,28 @@
             <h3 class="text-xl font-semibold mb-4">相关工具</h3>
             <div class="grid grid-cols-1 gap-4">
               <!-- 时间戳转换卡片 -->
-              <a href="timestamp.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
+              <a href="./timestamp.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
                 <i class="fas fa-clock text-blue-500 text-2xl mr-2"></i>
                 <!-- 时间戳转换图标 -->
                 <h3 class="text-lg font-semibold">时间戳转换</h3>
               </a>
 
               <!-- JSON 格式化卡片 -->
-              <a href="json-formatter.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
+              <a href="./json-formatter.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
                 <i class="fas fa-code text-blue-500 text-2xl mr-2"></i>
                 <!-- JSON 格式化图标 -->
                 <h3 class="text-lg font-semibold">JSON 格式化</h3>
               </a>
 
               <!-- 我的 IP 查询卡片 -->
-              <a href="ip-lookup.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
+              <a href="./ip-lookup.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
                 <i class="fas fa-globe text-blue-500 text-2xl mr-2"></i>
                 <!-- 我的 IP 查询图标 -->
                 <h3 class="text-lg font-semibold">我的 IP 查询</h3>
               </a>
 
               <!-- 在线视频转GIF卡片 -->
-              <a href="video-to-gif.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
+              <a href="./video-to-gif.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
                 <i class="fas fa-film text-blue-500 text-2xl mr-2"></i>
                 <!-- 在线视频转GIF图标 -->
                 <h3 class="text-lg font-semibold">在线视频转GIF</h3>
