--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <!-- 日期计算器 -->
-        <a href="date-calculator.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./date-calculator.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fa-solid fa-calculator text-blue-500 mr-2"></i>
             <!-- 日期计算器图标 -->
@@ -50,7 +50,7 @@
           <p class="text-gray-600">计算两个日期之间的时间差，或将日期转换为 Unix 时间戳。</p>
         </a>
         <!-- 时间戳转换卡片 -->
-        <a href="timestamp.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./timestamp.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fas fa-clock text-blue-500 mr-2"></i>
             <!-- 时间戳转换图标 -->
@@ -59,7 +59,7 @@
           <p class="text-gray-600">将时间戳转换为可读的日期和时间，或将日期和时间转换为时间戳。</p>
         </a>
         <!-- JSON 格式化卡片 -->
-        <a href="json-formatter.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./json-formatter.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fas fa-code text-blue-500 mr-2"></i>
             <!-- JSON 格式化图标 -->
@@ -68,7 +68,7 @@
           <p class="text-gray-600">格式化 JSON 数据，使其更易于阅读和调试。</p>
         </a>
         <!-- 我的 IP 查询卡片 -->
-        <a href="ip-lookup.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./ip-lookup.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fas fa-globe text-blue-500 mr-2"></i>
             <!-- 我的 IP 查询图标 -->
@@ -77,7 +77,7 @@
           <p class="text-gray-600">查询您的公共 IP 地址及其相关信息。</p>
         </a>
 
-        <a href="video-to-gif.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./video-to-gif.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fas fa-film text-blue-500 mr-2"></i>
             <!-- 在线视频转GIF图标 -->
