--- a/json-formatter.html
+++ b/json-formatter.html
@@ -41,7 +41,7 @@
       <!-- 面包屑导航 -->
       <nav class="mb-6">
         <ol class="flex items-center space-x-2 text-sm text-gray-600">
-          <li><a href="index.html" class="hover:text-blue-600">首页</a></li>
+          <li><a href="./index.html" class="hover:text-blue-600">首页</a></li>
           <li><span class="mx-2">/</span></li>
           <li class="text-gray-800">JSON 格式化</li>
         </ol>
