--- a/timestamp.html
+++ b/timestamp.html
@@ -43,7 +43,7 @@
       <!-- 面包屑导航 -->
       <nav class="mb-6">
         <ol class="flex items-center space-x-2 text-sm text-gray-600">
-          <li><a href="index.html" class="hover:text-blue-600">首页</a></li>
+          <li><a href="./index.html" class="hover:text-blue-600">首页</a></li>
           <li><span class="mx-2">/</span></li>
           <li class="text-gray-800">时间戳转换</li>
         </ol>
@@ -78,9 +78,9 @@
           <div class="mt-8">
             <h2 class="text-2xl font-semibold mb-4">相关内容推荐</h2>
             <ul class="list-disc pl-5 space-y-2">
-              <li><a href="json-formatter.html" class="text-blue-600 hover:underline">JSON 格式化工具</a> - 格式化 JSON 数据，使其更易于阅读和调试。</li>
-              <li><a href="ip-lookup.html" class="text-blue-600 hover:underline">我的 IP 查询工具</a> - 查询您的公共 IP 地址及其相关信息。</li>
-              <li><a href="video-to-gif.html" class="text-blue-600 hover:underline">在线视频转GIF工具</a> - 将视频文件转换为GIF动画，方便在社交媒体和聊天应用中分享。</li>
+              <li><a href="./json-formatter.html" class="text-blue-600 hover:underline">JSON 格式化工具</a> - 格式化 JSON 数据，使其更易于阅读和调试。</li>
+              <li><a href="./ip-lookup.html" class="text-blue-600 hover:underline">我的 IP 查询工具</a> - 查询您的公共 IP 地址及其相关信息。</li>
+              <li><a href="./video-to-gif.html" class="text-blue-600 hover:underline">在线视频转GIF工具</a> - 将视频文件转换为GIF动画，方便在社交媒体和聊天应用中分享。</li>
             </ul>
           </div>
         </div>
@@ -109,28 +109,28 @@
             <h3 class="text-xl font-semibold mb-4">相关工具</h3>
             <div class="grid grid-cols-1 gap-4">
               <!-- 时间戳转换卡片 -->
-              <a href="timestamp.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
+              <a href="./timestamp.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
                 <i class="fas fa-clock text-blue-500 text-2xl mr-2"></i>
                 <!-- 时间戳转换图标 -->
                 <h3 class="text-lg font-semibold">时间戳转换</h3>
               </a>
 
               <!-- JSON 格式化卡片 -->
-              <a href="json-formatter.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
+              <a href="./json-formatter.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
                 <i class="fas fa-code text-blue-500 text-2xl mr-2"></i>
                 <!-- JSON 格式化图标 -->
                 <h3 class="text-lg font-semibold">JSON 格式化</h3>
               </a>
 
               <!-- 我的 IP 查询卡片 -->
-              <a href="ip-lookup.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
+              <a href="./ip-lookup.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
                 <i class="fas fa-globe text-blue-500 text-2xl mr-2"></i>
                 <!-- 我的 IP 查询图标 -->
                 <h3 class="text-lg font-semibold">我的 IP 查询</h3>
               </a>
 
               <!-- 在线视频转GIF卡片 -->
-              <a href="video-to-gif.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
+              <a href="./video-to-gif.html" class="card bg-white rounded-lg shadow-lg p-4 hover:shadow-xl transition duration-300 flex items-center">
                 <i class="fas fa-film text-blue-500 text-2xl mr-2"></i>
                 <!-- 在线视频转GIF图标 -->
                 <h3 class="text-lg font-semibold">在线视频转GIF</h3>
