--- a/en/index-en.html
+++ b/en/index-en.html
@@ -42,7 +42,7 @@
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <!-- Timestamp Conversion Card -->
-        <a href="timestamp.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./timestamp.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fas fa-clock text-blue-500 mr-2"></i>
             <!-- Timestamp Conversion Icon -->
@@ -52,7 +52,7 @@
         </a>
 
         <!-- JSON Formatting Card -->
-        <a href="json-formatter.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./json-formatter.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fas fa-code text-blue-500 mr-2"></i>
             <!-- JSON Formatting Icon -->
@@ -62,7 +62,7 @@
         </a>
 
         <!-- IP Lookup Card -->
-        <a href="ip-lookup.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./ip-lookup.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fas fa-globe text-blue-500 mr-2"></i>
             <!-- IP Lookup Icon -->
@@ -72,7 +72,7 @@
         </a>
 
         <!-- Video to GIF Card -->
-        <a href="video-to-gif.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
+        <a href="./video-to-gif.html" class="card bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
           <div class="flex items-center mb-2">
             <i class="fas fa-film text-blue-500 mr-2"></i>
             <!-- Video to GIF Icon -->
