--- a/ip-lookup.html
+++ b/ip-lookup.html
@@ -42,7 +42,7 @@
       <!-- 面包屑导航 -->
       <nav class="mb-6">
         <ol class="flex items-center space-x-2 text-sm text-gray-600">
-          <li><a href="index.html" class="hover:text-blue-600">首页</a></li>
+          <li><a href="./index.html" class="hover:text-blue-600">首页</a></li>
           <li><span class="mx-2">/</span></li>
           <li class="text-gray-800">我的 IP 查询</li>
         </ol>
